package com.proj.safe_chat.firebase_noti;

public class NotificationModel {

    private String title;
    private String body;
    public NotificationModel(String title, String body) {
        this.title = title;
        this.body = body;
    }
    public String getBody() {
        return body;
    }

    public void setBody(String body) {
        this.body = body;
    }

    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }

}
